# actix-web-myworld-demo

./: .env  Cargo.toml  README.md  postgres.sql
src/: error.rs  main.rs  res.rs
src/app/: mod.rs
src/app/middlewares/auth/: ignore.rs  mod.rs
src/app/routes/: mod.rs
src/app/routes/api/: auth.rs  user.rs
src/app/services/: auth.rs  user.rs
src/db/: mod.rs  user.rs
src/models/: login.rs  mod.rs  pageable.rs  user.rs
src/utils/: hasher.rs  jwt.rs  mod.rs
