[package]
name = "actix-myworld-demo"
version = "0.1.0"
authors = ["amiron"]
edition = "2018"

[dependencies]
#web server
actix-web = "3.3"
actix-service = "1.0.6"

#rbatis orm 
rbatis = { version = "1.8", features = ["snowflake"] }
rbatis-macro-driver = { version = "1.8", features = ["no_print"] }

# futures
futures = "0.3.8"

#hash
libreauth = "0.14.0"

#snowflake
rustflake = "0.1.1"

#failure
failure = "0.1.8"

#validator
validator = "0.12.0"
validator_derive = "0.12.0"

#serde and base types
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

#chrono
chrono = {version = "0.4", features = ["serde"]}

#lazy_static
lazy_static = "1.4.0"

#log
log = "0.4.11"
env_logger = "0.8.2"

#.env
dotenv = "0.15"

#jwt
jsonwebtoken = "7"

#runtime
async-std = {version = "1.8", features = ["attributes", "tokio02"]}